--- a/training.html
+++ b/training.html
@@ -72,21 +72,164 @@ https://templatemo.com/tm-548-training-studio
 
 
     <!-- ***** Features Item Start ***** -->
-    <section class="section">
+    <section class="section" id="training-schedule">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
                     <div class="section-heading">
-                        <h2>Comming Soon</h2>
-
-                </div>  
+                        <h2>睡眠の重要性</h2>
+                    </div>
+                </div>
             </div>
-
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="schedule-item">
+                        <h4>正しいフォーム</h4>
+                        <p>6:00 PM - 7:00 PM: Cardio</p>
+                        <p>7:00 PM - 8:00 PM: Strength Training</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="schedule-item">
+                        <h4>適切な重量設定</h4>
+                        <p>6:00 PM - 7:00 PM: HIIT</p>
+                        <p>7:00 PM - 8:00 PM: Core Workout</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="schedule-item">
+                        <h4>休息の重要性</h4>
+                        <p>6:00 PM - 7:00 PM: Yoga</p>
+                        <p>7:00 PM - 8:00 PM: Full Body Workout</p>
+                    </div>
+                </div>
+            </div>
         </div>
-  
-        
     </section>
-    
+    <section class="section" id="training-schedule">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center">
+                    <div class="section-heading">
+                        <h2>食事のポイント</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="schedule-item">
+                        <h4>正しいフォーム</h4>
+                        <p>6:00 PM - 7:00 PM: Cardiああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああo</p>
+                        <p>7:00 PM - 8:00 PM: Strength Training</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="schedule-item">
+                        <h4>適切な重量設定</h4>
+                        <p>6:00 PM - 7:00 PM: HIIT</p>
+                        <p>7:00 PM - 8:00 PM: Core Workout</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="schedule-item">
+                        <h4>休息の重要性</h4>
+                        <p>6:00 PM - 7:00 PM: Yoga</p>
+                        <p>7:00 PM - 8:00 PM: Full Body Workout</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- ***** Features Item Start ***** -->
+<section class="section" id="training-schedule">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center">
+                <div class="section-heading">
+                    <h2>筋トレの詳しいポイント</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="schedule-item">
+                    <h4>正しいフォーム</h4>
+                    <p>6:00 PM - 7:00 PM: Cardio</p>
+                    <p>7:00 PM - 8:00 PM: Strength Training</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="schedule-item">
+                    <h4>適切な重量設定</h4>
+                    <p>6:00 PM - 7:00 PM: HIIT</p>
+                    <p>7:00 PM - 8:00 PM: Core Workout</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="schedule-item">
+                    <h4>休息の重要性</h4>
+                    <p>6:00 PM - 7:00 PM: Yoga</p>
+                    <p>7:00 PM - 8:00 PM: Full Body Workout</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- space -->
+<br>
+<section class="section" id="training-schedule">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="schedule-item">
+                    <h4>メニュー作成</h4>
+                    <p>6:00 PM - 7:00 PM: Cardio</p>
+                    <p>7:00 PM - 8:00 PM: Strength Training</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="schedule-item">
+                    <h4>おすすめメニュー</h4>
+                    <p>6:00 PM - 7:00 PM: HIIT</p>
+                    <p>7:00 PM - 8:00 PM: Core Workout</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="schedule-item">
+                    <h4>続けるコツ</h4>
+                    <p>6:00 PM - 7:00 PM: Yoga</p>
+                    <p>7:00 PM - 8:00 PM: Full Body Workout</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section" id="training-schedule">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center">
+                <div class="section-heading">
+                    <h2>漸進性過負荷の原則</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="section" id="training-schedule">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center">
+                <div class="section-heading">
+                    <h2>部員のメニュー紹介</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     <!-- ***** Features Item End ***** -->
 
     <!-- ***** Call to Action Start ***** -->
