いろいろやたよ

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ https://templatemo.com/tm-548-training-studio
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="section-heading">
-                <h2>新着情報</h2>
+                        <h2 id="news-section">新着情報</h2> <!-- ←ここにidを追加 -->
                 <ul class="list-unstyled">
                     <li><strong>2024/12/30</strong> <a href="news/post1.html">子ども食堂2025を開催いたします。</a></li>
                     <li><strong>2024/12/17</strong> <a href="news/post2.html">入替戦抽選結果が確定しました。</a></li>
