ベンチプレス大会の報告をしました

--- a/index.html
+++ b/index.html
@@ -172,21 +172,10 @@ https://templatemo.com/tm-548-training-studio
                     <div class="section-heading">
                         <h2 id="news-section">新着情報</h2> <!-- ←ここにidを追加 -->
                 <ul class="list-unstyled">
-                    <li><strong>2024/12/30</strong> <a href="news/post1.html">子ども食堂2025を開催いたします。</a></li>
-                    <li><strong>2024/12/17</strong> <a href="news/post2.html">入替戦抽選結果が確定しました。</a></li>
-                    <li><strong>2024/12/09</strong> <a href="news/post3.html">第6戦の試合結果をお知らせいたします。</a></li>
-                    <li><strong>2024/11/26</strong> <a href="news/post4.html">最終戦招待試合のお知らせです。</a></li>
-                    <li><strong>2024/11/26</strong> <a href="news/post5.html">第5戦の試合結果をお知らせいたします。</a></li>
-                    <li><strong>2024/11/10</strong> <a href="news/post6.html">第4戦の試合結果をお知らせいたします。</a></li>
-                    <li><strong>2024/10/21</strong> <a href="news/post7.html">第3戦が不戦勝となりました。</a></li>
-                    <li><strong>2024/10/07</strong> <a href="news/post8.html">第2戦が不戦勝となりました。</a></li>
-                    <li><strong>2024/09/30</strong> <a href="news/post9.html">第1戦の試合結果をお知らせいたします。</a></li>
-                    <li><strong>2024/09/11</strong> <a href="news/post10.html">ホームカミングデーについて、詳細情報を追記しました。</a></li>
-                    <li><strong>2024/08/29</strong> <a href="news/post11.html">ホームカミングデーを開催します。</a></li>
-                    <li><strong>2024/08/28</strong> <a href="news/post12.html">イベント情報を更新しました。</a></li>
-                    <li><strong>2024/06/18</strong> <a href="news/post13.html">イベント情報を更新しました。</a></li>
-                    <li><strong>2024/04/18</strong> <a href="news/post14.html">部員情報を更新しました。</a></li>
-                    <li><strong>2024/03/27</strong> <a href="news/post15.html">2024年度新情報を更新しました。</a></li>
+                    <li><strong>2025/1/15</strong> <a href="news/post3.html">2024年度ベンチプレス大会を無事終了しました！</a></li>
+                    <li><strong>2024/12/23</strong> <a href="news/post2.html">2024年度ベンチプレス大会開催のお知らせ</a></li>
+                    <li><strong>2024/12/11</strong> <a href="news/post1.html">トレーニングマニュアル設置のお知らせ</a></li>
+                
                 </ul>
             </div>
             
