trainingの文章を記入

--- a/training.html
+++ b/training.html
@@ -84,23 +84,20 @@ https://templatemo.com/tm-548-training-studio
             <div class="row">
                 <div class="col-lg-4">
                     <div class="schedule-item">
-                        <h4>正しいフォーム</h4>
-                        <p>6:00 PM - 7:00 PM: Cardio</p>
-                        <p>7:00 PM - 8:00 PM: Strength Training</p>
+                        <h4>睡眠の役割</h4>
+                        <p>睡眠は身体の修復や成長、そして精神のリフレッシュに不可欠です。十分な睡眠を取ることで、たくさんのテストステロンを生成し、トレーニング効果を最大限に引き出すことができます。</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="schedule-item">
-                        <h4>適切な重量設定</h4>
-                        <p>6:00 PM - 7:00 PM: HIIT</p>
-                        <p>7:00 PM - 8:00 PM: Core Workout</p>
+                        <h4>推奨される睡眠時間</h4>
+                        <p>成人は1日7-9時間の睡眠が推奨されています。特に筋トレを行っている場合、筋肉の回復を助けるために十分な睡眠が必要です。</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="schedule-item">
-                        <h4>休息の重要性</h4>
-                        <p>6:00 PM - 7:00 PM: Yoga</p>
-                        <p>7:00 PM - 8:00 PM: Full Body Workout</p>
+                        <h4>質の高い睡眠のためのポイント</h4>
+                        <p>まずは多くの睡眠時間を確保し、寝る前にリラックスする時間を設ける、寝室を快適に保つ、規則的な睡眠スケジュールを守るなどが、質の高い睡眠を確保するためのポイントです。</p>
                     </div>
                 </div>
             </div>
@@ -118,23 +115,20 @@ https://templatemo.com/tm-548-training-studio
             <div class="row">
                 <div class="col-lg-4">
                     <div class="schedule-item">
-                        <h4>正しいフォーム</h4>
-                        <p>6:00 PM - 7:00 PM: Cardiああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああo</p>
-                        <p>7:00 PM - 8:00 PM: Strength Training</p>
+                        <h4>バランスの取れた食事</h4>
+                        <p>タンパク質、炭水化物、脂質、ビタミン、ミネラルをバランスよく摂取することが重要です。特にタンパク質は筋肉の修復と成長に欠かせません。</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="schedule-item">
-                        <h4>適切な重量設定</h4>
-                        <p>6:00 PM - 7:00 PM: HIIT</p>
-                        <p>7:00 PM - 8:00 PM: Core Workout</p>
+                        <h4>食事のタイミング</h4>
+                        <p>トレーニング前にはエネルギー補給として炭水化物を、トレーニング後には筋肉の回復を助けるためにタンパク質を摂取することが推奨されます。</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="schedule-item">
-                        <h4>休息の重要性</h4>
-                        <p>6:00 PM - 7:00 PM: Yoga</p>
-                        <p>7:00 PM - 8:00 PM: Full Body Workout</p>
+                        <h4>水分補給</h4>
+                        <p>適切な水分補給はパフォーマンスを維持し、筋肉の疲労を軽減するために重要です。トレーニング中やトレーニング後には特に注意して水分を摂取しましょう。</p>
                     </div>
                 </div>
             </div>
@@ -154,22 +148,20 @@ https://templatemo.com/tm-548-training-studio
             <div class="col-lg-4">
                 <div class="schedule-item">
                     <h4>正しいフォーム</h4>
-                    <p>6:00 PM - 7:00 PM: Cardio</p>
-                    <p>7:00 PM - 8:00 PM: Strength Training</p>
+                    <p>正しいフォームでトレーニングを行うことで、効果を最大化し、怪我のリスクを減らすことができます。初心者は特にフォームに注意を払いましょう。また、怪我予防には日々のストレッチやウォームアップなどが有効です。</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="schedule-item">
                     <h4>適切な重量設定</h4>
-                    <p>6:00 PM - 7:00 PM: HIIT</p>
-                    <p>7:00 PM - 8:00 PM: Core Workout</p>
+                    <p>自分のレベルに合った重量を選ぶことが重要です。過度な重量は怪我の原因となり、軽すぎる重量では効果が得られません。
+                        筋力向上や筋肥大には5~8回の設定が最も効果が高いとされています。1セットを8回で行う日と、5回で行う日を使い分けると体が刺激になれるのを防ぎ、成長しやすくなるのでお勧めです。</p>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="schedule-item">
                     <h4>休息の重要性</h4>
-                    <p>6:00 PM - 7:00 PM: Yoga</p>
-                    <p>7:00 PM - 8:00 PM: Full Body Workout</p>
+                    <p>筋肉はトレーニング後の休息期間に成長します。十分な休息を取ることで、トレーニングの効果を高めることができます。適切な食事を摂り、シャワーだけでなくゆっくり湯船につかりましょう。</p>
                 </div>
             </div>
         </div>
@@ -184,24 +176,37 @@ https://templatemo.com/tm-548-training-studio
             <div class="col-lg-4">
                 <div class="schedule-item">
                     <h4>メニュー作成</h4>
-                    <p>6:00 PM - 7:00 PM: Cardio</p>
-                    <p>7:00 PM - 8:00 PM: Strength Training</p>
+                    <p>メニューは熟練度によって変わりますが、筋トレサークルでは全身法を進めています。
+                        全身法とは名前の通り1日のトレーニングで全身を鍛えるものです。
+                        胸、背中、足を3セットずつ適切の行うトレーニングを週2回行っていればおのずと結果は見えてくるでしょう。
+                        部位で分ける分割法もいいですが1日で2部位は行いましょう</p>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="schedule-item">
-                    <h4>おすすめメニュー</h4>
-                    <p>6:00 PM - 7:00 PM: HIIT</p>
-                    <p>7:00 PM - 8:00 PM: Core Workout</p>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="schedule-item">
-                    <h4>続けるコツ</h4>
-                    <p>6:00 PM - 7:00 PM: Yoga</p>
-                    <p>7:00 PM - 8:00 PM: Full Body Workout</p>
-                </div>
-            </div>
+           <!-- おすすめメニュー -->
+<div class="col-lg-4">
+    <div class="schedule-item">
+        <h4>おすすめメニュー</h4>
+        <p>おすすめ種目（トレセンでできること）</p>
+        <ul>
+            <li><strong>胸：</strong>ベンチプレス、ディップス</li>
+            <li><strong>背中：</strong>懸垂、デッドリフト、ベントオーバーローイング、ラットプルダウン</li>
+            <li><strong>肩：</strong>ミリタリープレス、ダンベルサイドレイズ</li>
+            <li><strong>足：</strong>スクワット、デッドリフト</li>
+            <li><strong>腕：</strong>インクラインダンベルカール、ライイングエクステンション</li>
+        </ul>
+    </div>
+</div>
+          <!-- 続けるコツ -->
+<div class="col-lg-4">
+    <div class="schedule-item">
+        <h4>続けるコツ</h4>
+        <ul>
+            <li><strong>成長の実感：</strong> 体の写真を撮ったり、筋トレメニューを記録しよう！</li>
+            <li><strong>合トレ仲間：</strong> 友達と一緒にトレーニングをしてモチベーションを高めよう！</li>
+            <li><strong>のんびりやる：</strong> 焦らず、習慣として継続することが大切。</li>
+        </ul>
+    </div>
+</div>
         </div>
     </div>
 </section>
@@ -212,6 +217,9 @@ https://templatemo.com/tm-548-training-studio
             <div class="col-md-8 text-center">
                 <div class="section-heading">
                     <h2>漸進性過負荷の原則</h2>
+                    <p>漸進性過負荷の原則とは筋肉の成長のためには常に前回よりも大きな負荷を筋肉に与えなければならないということを意味します。
+                        この原則に従ったトレーニングをしなければ理想とする体を手にすることはできないでしょう。
+                        前回のトレーニングよりも重い重量もしくは同じ重量で回数を増やすことを徹底しましょう。</p>
                 </div>
             </div>
         </div>
