training部員のメニュー部分も完成

--- a/training.html
+++ b/training.html
@@ -227,17 +227,104 @@ https://templatemo.com/tm-548-training-studio
 </section>
 
 
-<section class="section" id="training-schedule">
+<!-- ***** 部員のメニュー紹介 ***** -->
+<section class="section" id="member-training">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center">
                 <div class="section-heading">
                     <h2>部員のメニュー紹介</h2>
+                    <p>UEC筋トレサークルの部員たちのトレーニングメニューと、その成果を紹介します！💪🔥</p>
                 </div>
             </div>
         </div>
+
+        <!-- 部員1 -->
+        <div class="row align-items-center mb-4">
+            <div class="col-md-4 text-center">
+                <a href="assets/images/members/murataback.JPG" target="_blank">
+                    <img src="assets/images/members/murataback.JPG" alt="部員1の写真" class="img-fluid member-img">
+                </a>
+            </div>
+            <div class="col-md-8">
+                <h4>🔥 Keita Murata（学部4年）</h4>
+                <p><strong>目標:</strong> かっこいい体になる！！</p>
+                <p><strong>トレーニングメニュー:</strong></p>
+
+                <p>月曜日:ベンチプレス、スクワット、懸垂<br>
+                    水曜日:デッドリフト、オーバーヘッドプレス<br>
+                    金曜日:ベンチプレス、スクワット、懸垂<br>
+                    <font color="red">マックス重量</font> <br>
+                    スクワット:105kg<br>
+                    ベンチプレス:100kg<br>
+                    デッドリフト:150kg
+                </p>
+                <p><strong>コメント:</strong></p>
+                <p>重量を更新していくことが一番大事です！！きれいなフォームを習得して筋トレしながらたくさんご飯を食べてよく寝ましょう！！</p>
+            </div>
+        </div>
+
+        <!-- 部員2 -->
+        <div class="row align-items-center mb-4">
+            <div class="col-md-4 text-center">
+                <a href="assets/images/members/takamuraback.jpg" target="_blank">
+                    <img src="assets/images/members/takamuraback.jpg" alt="部員2の写真" class="img-fluid member-img">
+                </a>
+            </div>
+            <div class="col-md-8">
+                <h4>🏋️‍♀️ Taisei Takamura（学部3年）</h4>
+                <p><strong>目標:</strong> 動ける体を！！</p>
+                <p><strong>トレーニングメニュー:</strong></p>
+                <p>月曜日：ベンチプレス,ダンベルフライ,インクラインベンチプレス,荷重ディップス<br>
+                    火曜日：荷重懸垂、床引きデッドリフト、ベントオーバーロウ、ダンベルシュラッグ、逆手懸垂<br>
+                    水曜日：ミリタリープレス、サイドレイズ、ライイングリアレイズ、ハンギングワイパー、アブローラー<br>
+                 
+                    木曜日：ベンチプレス、フレンチプレス、プレスダウン<br>
+                    金曜日：スクワット、レッグカール／エクステンション※スーパーセット<br>
+                    土曜日：・フロントレイズ,サイドレイズ,ダンベルショルダープレス,アブローラー,ツイストクランチ<br>
+                    <font color="red">マックス重量</font> <br>
+                    スクワット:110kg<br>
+                    ベンチプレス:115kg<br>
+                    デッドリフト:150kg
+                 </p>
+ 
+                <p><strong>コメント:</strong></p>
+                <p><strong>必ず結果はついてきます！！</strong></p>
+            </div>
+        </div>
+
+        <!-- 部員3 -->
+        <div class="row align-items-center mb-4">
+            <div class="col-md-4 text-center">
+                <a href="assets/images/members/nakaharaback.jpg" target="_blank">
+                    <img src="assets/images/members/nakaharaback.jpg" alt="部員3の写真" class="img-fluid member-img">
+                </a>
+            </div>
+            <div class="col-md-8">
+                <h4>💪 Kenta Suzuki（修士1年）</h4>
+                <p><strong>目標:</strong> BIG3合計500kg越え！！</p>
+                <p><strong>トレーニングメニュー:</strong></p>
+                <p>月曜日:(高重量高回数)ベンチプレス、ディップス、オーバーヘッドプレス、ナローベンチプレス<br>
+                    水曜日:スクワット、レッグエクステンション<br>
+                    木曜日:(低重量高回数)ベンチプレス、スクワット、懸垂<br>
+                    金曜日:デッドリフト、懸垂、ラットプルダウン、アームカール<br>
+                    <font color="red">マックス重量</font> <br>
+                スクワット:150kg<br>
+                ベンチプレス:105kg<br>
+                デッドリフト:190kg
+            </p>
+
+
+                <p><strong>コメント:</strong></p>
+                <p><strong>トレセンだけでも十分筋肉はつけられる!!</strong><br>
+                トレセンはマシンが少なめなので最初は難しいかもしれませんが，短時間で全身満遍なく鍛えられるフリーウェイは充実していてとても良いです．
+                    </p>
+            </div>
+        </div>
+
     </div>
 </section>
+
     <!-- ***** Features Item End ***** -->
 
     <!-- ***** Call to Action Start ***** -->
