ページ大幅更新

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@ https://templatemo.com/tm-548-training-studio
                     <div class="section-heading">
                         <h2 id="news-section">新着情報</h2> <!-- ←ここにidを追加 -->
                 <ul class="list-unstyled">
+                    <li><strong>2025/4/19</strong> <a href="news/post6.html">新入生筋トレ体験会の開催報告！！</a></li>
+                    <li><strong>2025/4/6</strong> <a href="news/post4.html">2025/4/16にプロテイン試飲会を開催します！！</a></li>
+                    <li><strong>2025/4/2</strong> <a href="news/post5.html">2025/4/18に新入生筋トレ体験会開催のお知らせ</a></li>
                     <li><strong>2025/1/15</strong> <a href="news/post3.html">2024年度ベンチプレス大会を無事終了しました！</a></li>
                     <li><strong>2024/12/23</strong> <a href="news/post2.html">2024年度ベンチプレス大会開催のお知らせ</a></li>
                     <li><strong>2024/12/11</strong> <a href="news/post1.html">トレーニングマニュアル設置のお知らせ</a></li>
