--- a/news.html
+++ b/news.html
@@ -91,6 +91,15 @@ https://templatemo.com/tm-548-training-studio
 
                 <!-- ニュース一覧 -->
                 <ul class="news-list">
+                    <li class="news-item" data-category="event">
+                        <strong>2025/4/19</strong> <a href="news/post6.html">新入生筋トレ体験会の開催報告！！</a>
+                    </li>
+                    <li class="news-item" data-category="event">
+                        <strong>2025/4/6</strong> <a href="news/post4.html">2025/4/16にプロテイン試飲会を開催します！！</a>
+                    </li>
+                    <li class="news-item" data-category="event">
+                        <strong>2025/4/2</strong> <a href="news/post5.html">2025/4/18に新入生筋トレ体験会開催のお知らせ</a>
+                    </li>
                     <li class="news-item" data-category="tournament">
                         <strong>2025/1/15</strong> <a href="news/post3.html">2024年度ベンチプレス大会を無事終了しました！</a>
                     </li>
