--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://templatemo.com/tm-548-training-studio
                         <h5></h5>
                         
                         <h5>筋トレ好きやダイエット，健康目的な方など幅広い層の学生が集まっております．筋トレはつらいものですがみんなで楽しんでかっこいい体を目指しましょう!</h5>
-                        <img src="/assets/images/training-image-01.jpg" alt="筋トレイメージ" class="img-fluid">
+                        <!--<img src="/assets/images/training-image-01.jpg" alt="筋トレイメージ" class="img-fluid">-->
                     </div>
                 </div>
             </div>
