アフィ準備完了

--- a/news.html
+++ b/news.html
@@ -86,11 +86,15 @@ https://templatemo.com/tm-548-training-studio
                     <button onclick="filterNews('all')">すべて</button>
                     <button onclick="filterNews('tournament')">大会関連</button>
                     <button onclick="filterNews('event')">イベント情報</button>
+                    <button onclick="filterNews('fitness')">フィットネス情報</button>
                     <button onclick="filterNews('report')">活動報告</button>
                 </div>
 
                 <!-- ニュース一覧 -->
                 <ul class="news-list">
+                    <li class="news-item" data-category="fitness">
+                        <strong>2025/4/21</strong> <a href="news/post7.html">必見！！筋トレ初心者が買うべきもの集！！</a>
+                    </li>
                     <li class="news-item" data-category="event">
                         <strong>2025/4/19</strong> <a href="news/post6.html">新入生筋トレ体験会の開催報告！！</a>
                     </li>
