ビフォーアフター説明追加

--- a/about.html
+++ b/about.html
@@ -166,6 +166,7 @@ https://templatemo.com/tm-548-training-studio
                 <div class="col-md-8 text-center">
                     <div class="section-heading">
                         <h2>部員のビフォーアフター</h2>
+                        <p>写真にカーソルを合わせるもしくはタッチでアフターに切り替わります</p>
                        
                     </div>
                 </div>  
