--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
-  <head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+  <title>UEC 筋トレサークル</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-training-studio.css">
+  <style>
+    .section-heading ul.list-unstyled {
+      text-align: left;
+      padding-left: 0;
+    }
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+    .section-heading ul.list-unstyled li {
+      text-align: left;
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
 
-    <title>UEC 筋トレサークル</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-training-studio.css">
+    .schedule-card {
+      background-color: #f8f9fa;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    }
 
-    <style>
-        .section-heading ul.list-unstyled {
-            text-align: left;
-            padding-left: 0;
-        }
-    
-        .section-heading ul.list-unstyled li {
-            text-align: left;
-            font-size: 18px;
-            margin-bottom: 8px;
-        }
-    </style>
+    .schedule-card li::before {
+      content: "📅 ";
+    }
+  </style>
+</head>
 
-  </head>
-  
-  <body>
-  
-  <!-- Preloader -->
+<body>
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
@@ -43,7 +48,6 @@
     </div>
   </div>
 
-  <!-- Header -->
   <header class="header-area header-sticky">
     <div class="container">
       <div class="row">
@@ -57,8 +61,8 @@
               <li class="scroll-to-section"><a href="about.html">About</a></li>
               <li class="scroll-to-section"><a href="training.html">Training</a></li>
               <li class="scroll-to-section"><a href="news.html">NEWS</a></li>
-              <li class="scroll-to-section"><a href="join.html">Join</a></li> 
-            </ul>        
+              <li class="scroll-to-section"><a href="join.html">Join</a></li>
+            </ul>
             <a class='menu-trigger'><span>Menu</span></a>
           </nav>
         </div>
@@ -66,13 +70,11 @@
     </div>
   </header>
 
-  <!-- Main Banner -->
   <div class="main-banner">
     <img src="assets/images/header.png" alt="Gym Banner" id="bg-image" />
     <div class="main-button scroll-to-section"></div>
   </div>
 
-  <!-- Section Content -->
   <section class="section">
     <div class="container">
       <div class="row justify-content-center">
@@ -90,12 +92,13 @@
           <div class="section-heading">
             <h2>活動スケジュール</h2>
           </div>
-          <ul class="list-unstyled">
-            <li>・月金 16:30〜18:30（夕方練）
-            </li>
-            <li>・ベンチプレス大会</li>
-            <li>・その他イベント</li>
-          </ul>
+          <div class="schedule-card">
+            <ul class="list-unstyled">
+              <li><strong>月・金 16:30〜18:30：</strong> トレセンで自由参加の夕方トレーニング</li>
+              <li><strong>ベンチプレス大会：</strong> 年2回の公式イベント！豪華賞品あり</li>
+              <li><strong>その他：</strong> プロテイン試飲会、新歓トレ、ジム見学会など随時開催</li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -109,6 +112,19 @@
           <p>初心者でも安心して始められる環境が整っており、みんなで支え合いながら成長していけます。</p>
         </div>
       </div>
+
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="section-heading">
+            <h2>おすすめサプリ＆ギア紹介</h2>
+          </div>
+          <p>初心者におすすめのプロテイン、トレーニングギア、美容アイテムをまとめた記事を公開中！</p>
+          <div class="text-center">
+            <a href="news/post7.html" class="btn btn-warning btn-lg" style="color:white;">💪 投稿を見る</a>
+          </div>
+        </div>
+      </div>
+
 
       <div class="row justify-content-center">
         <div class="col-md-8">
