記事を3つ追加

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
           <div class="section-heading">
             <h2 id="news-section">新着情報</h2>
             <ul class="list-unstyled">
+              <li><strong>2025/5/20</strong> <a href="news/post10.html">ご飯会＆トレーニングセミナー開催のお知らせ！！</a></li>
+              <li><strong>2025/5/19</strong> <a href="news/post9.html">2025年度の新入生入部人数大発表！！</a></li>
+              <li><strong>2025/5/8</strong> <a href="news/post8.html">筋トレサークル専用トレーニング管理アプリを作成しました！！</a></li>
               <li><strong>2025/4/21</strong> <a href="news/post7.html">必見！！筋トレ初心者が買うべきもの集！！</a></li>
               <li><strong>2025/4/19</strong> <a href="news/post6.html">新入生筋トレ体験会の開催報告！！</a></li>
               <li><strong>2025/4/6</strong> <a href="news/post4.html">2025/4/16にプロテイン試飲会を開催します！！</a></li>
