--- a/news.html
+++ b/news.html
@@ -92,6 +92,15 @@ https://templatemo.com/tm-548-training-studio
 
                 <!-- ニュース一覧 -->
                 <ul class="news-list">
+                    <li class="news-item" data-category="event">
+                        <strong>2025/5/20</strong> <a href="news/post10.html">ご飯会＆トレーニングセミナー開催のお知らせ！！</a>
+                    </li>                    
+                    <li class="news-item" data-category="report">
+                        <strong>2025/5/19</strong> <a href="news/post9.html">2025年度の新入生入部人数大発表！！</a>
+                    </li>                    
+                    <li class="news-item" data-category="fitness">
+                        <strong>2025/5/8</strong> <a href="news/post8.html">筋トレサークル専用トレーニング管理アプリを作成しました！！</a>
+                    </li>
                     <li class="news-item" data-category="fitness">
                         <strong>2025/4/21</strong> <a href="news/post7.html">必見！！筋トレ初心者が買うべきもの集！！</a>
                     </li>
