記事を一つ追加

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           <div class="section-heading">
             <h2 id="news-section">新着情報</h2>
             <ul class="list-unstyled">
+              <li><strong>2025/7/18</strong> <a href="news/post12.html">2025年度ベンチプレス大会を無事終了しました！！</a></li>
               <li><strong>2025/6/18</strong> <a href="news/post11.html">ベンチプレス大会開催のお知らせ！！</a></li>
               <li><strong>2025/5/20</strong> <a href="news/post10.html">ご飯会＆トレーニングセミナー開催のお知らせ！！</a></li>
               <li><strong>2025/5/19</strong> <a href="news/post9.html">2025年度の新入生入部人数大発表！！</a></li>
