--- a/news.html
+++ b/news.html
@@ -93,6 +93,9 @@ https://templatemo.com/tm-548-training-studio
                 <!-- ニュース一覧 -->
                 <ul class="news-list">
                     <li class="news-item" data-category="event">
+                        <strong>2025/7/18</strong> <a href="news/post12.html">2025年度ベンチプレス大会を無事終了しました！！</a>
+                    </li>   
+                    <li class="news-item" data-category="event">
                         <strong>2025/6/18</strong> <a href="news/post11.html">ベンチプレス大会開催のお知らせ！！</a>
                     </li>    
                     <li class="news-item" data-category="event">
